# semantic-plagiarism-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/sample_corpus/: doc_01.txt  doc_02.txt  doc_03.txt  doc_04.txt  doc_05.txt  doc_06.txt  doc_07.txt  doc_08.txt  pairs_demo.csv
docs/: report.md
notebooks/: exploration.ipynb
outputs/: candidates.csv  error_examples.json  metrics.csv  two_file_compare.json
scripts/: build_pdf.py  extract_errors.py
src/plagiarism_engine/: __init__.py  cli.py  dataset.py  evaluation.py  lsh.py  minhash.py  preprocessing.py  simhash.py
tests/: test_engine.py
