[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plagiarism_engine"
version = "0.1.0"
description = "Semantic duplicate and near-plagiarism detection (MinHash+LSH and TF-IDF SimHash)."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
plagiarism-engine = "plagiarism_engine.cli:main"
